<resources>
    <string name="app_name">OtakuVerse</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="name">Nome</string>
    <string name="password">Senha</string>
    <string name="register">Registrar</string>
    <string name="register_activity_title">Título da atividade de registro</string>
    <string name="home_activity_label">Label da atividade principal</string>
    <string name="digite_sua_postagem">Digite sua postagem</string>
    <string name="postar">Postar</string>
    <string name="logout">Logout</string>
    <string name="create_account">create_account</string>
    <string name="digite_o_conte_do_do_post">Digite o conteúdo do post</string>
    <string name="criar_post">Criar Post</string>
    <string name="comentar">Comentar</string>
    <string name="curtir">Curtir</string>
    <string name="discutir">Discutir</string>
    <string name="coment_rios">Comentários:</string>
    <string name="ver_feed">Ver Feed</string>
    <string name="_0_curtidas">0 curtidas</string>
    <string name="_0_descurtidas">0 descurtidas</string>
    <string name="excluir">excluir</string>
    <string name="todo">TODO</string>
    <string name="ver_postagem">Ver Postagem</string>
    <string name="ver_post">Ver Post</string>
    <string name="digite_seu_coment_rio">Digite seu comentário</string>
    <string name="adicionar_coment_rio">Adicionar Comentário</string>
    <string name="age">age</string>
    <string name="bio">bio</string>
    <string name="location">location</string>
    <string name="interests">interests</string>
    <string name="add_comment">Adicionar Comment</string>
    <string name="comment">comment</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="feed" />
    <string name="create_post" />
    <string name="profile" />
    <string name="user_email">User Email</string>
    <string name="enter_post_content">Enter Post Content</string>
</resources>
