<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color">

    <!-- Barra de navegação na parte superior -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/nav_bar_color"
        android:elevation="8dp">

        <ImageButton
            android:id="@+id/buttonFeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_feed"
            android:contentDescription="@string/feed" />

        <ImageButton
            android:id="@+id/buttonCreatePost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_create_post"
            android:contentDescription="@string/create_post" />

        <ImageButton
            android:id="@+id/buttonProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/profile" />

    </LinearLayout>

    <!-- Elementos de perfil e logout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewUserEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_email"
            android:textColor="@color/name_text_color"
            android:textSize="18sp"
            android:gravity="center_vertical"/>

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/name_text_color"
            android:backgroundTint="@color/purple_700"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>
    </LinearLayout>

    <!-- Campo para inserir post -->
    <EditText
        android:id="@+id/editTextPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_post_content"
        android:backgroundTint="@color/purple_700"
        android:textColor="@color/name_text_color"
        android:padding="16dp"
        android:layout_margin="16dp"/>

</LinearLayout>
