<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color">

    <EditText
        android:id="@+id/editTextPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_sua_postagem"
        android:textColorHint="@color/light_gray"
        android:backgroundTint="@color/purple_200"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postar"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonViewPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_postagem"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:layout_marginTop="8dp" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColorHint="@color/light_gray" />

</LinearLayout>
